PI-1431 PT Mutation ::  Alignment issue in Pending Amount Due popup

--- a/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/propertyTax/Property/components/PendingAmountDue/index.scss
+++ b/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/propertyTax/Property/components/PendingAmountDue/index.scss
@@ -84,3 +84,7 @@
           max-width: 45% !important;
         }
       }
+
+      .pendingAmountDialog {
+        display: inline-block !important;
+      }
